syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.checkinn.auth.grpc";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc Login (AuthLoginRequest) returns (AuthLoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message AuthLoginRequest {
  string usernameOrEmail = 1;
  string password = 2;
}

message AuthLoginResponse {
  string token = 1;
  string userId = 2;
  string role = 3;
  string email = 4;
  string fullName = 5;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string userId = 1;
  string role = 2;
}
